# w3multicall

./: .gitignore  README.md  package.sh  pyproject.toml  requirements.txt  setup.cfg
examples/: dfk.py  mutithread_multicall.py  simple_multicall.py
src/w3multicall/: multicall.py
src/w3multicall/threading/: w3multicall_executor.py
src/w3multicall/w3/: w3.py
src/w3multicall/web3/: web3.py
