[build-system]
requires = ["setuptools>=57"]
build-backend = "setuptools.build_meta"

[project]
name = "w3multicall"
description = "Python interface and utilities for Solidity multicall contract"
authors = [{name = "Ortis", email = "ortis@ortis.io"}]
version = "0.0.1"
readme = "README.md"
keywords = ["blockchain", "web3", "etherum", "solidity"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "web3",
    'importlib-metadata; python_version<"3.8"',
]